[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["DmitriyGolubev <999gothicman999@mail.ru>"]
readme = "README.md"
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
